--- a/index.html
+++ b/index.html
@@ -329,7 +329,9 @@
               <div class="card bg-success">
                 <div class="card-body p-sm-4">
                   <h5 class="text-white">Blog Sauagroallied</h5>
-                  <p class="mb-0 text-white">write email to us<span class="text-white fs--1 fs-sm-1">&nbsp; suaagroalliedconsult@gmail.com</span></p><button class="btn btn-light text-success" type="button"> <svg class="bi bi-person me-1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#76C279" viewBox="0 0 16 16">
+                  <p class="mb-0 text-white">write email to us<span class="text-white fs--1 fs-sm-1">&nbsp; suaagroalliedconsult@gmail.com</span></p>
+                  <p class="mb-0 text-white">Phone Numbers<span class="text-white fs--1 fs-sm-1">&nbsp; 08136548854, 07032101055</span></p>
+                  <button class="btn btn-light text-success" type="button"> <svg class="bi bi-person me-1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#76C279" viewBox="0 0 16 16">
                       <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"></path>
                     </svg>Sing In</button>
                 </div>
